add technology pages style

--- a/layouts/crew-engineer.html
+++ b/layouts/crew-engineer.html
@@ -74,7 +74,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="" class="font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
                     sm:relative sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
@@ -91,7 +91,7 @@
         <div class="crew__bg absolute text-pureWhite text-center top-0 -z-10
             flex items-center justify-center">
             <div class="crew-bg-img bg-crewBgPhn bg-no-repeat bg-cover bg-center
-             w-screen h-[720px] min-h-screen overflow-hidden
+             w-screen h-[720px] min-h-screen
 
             md:bg-crewBgTab 
             lg:bg-crewBgDesk ">
@@ -99,7 +99,7 @@
         </div>
 
         <div class="crew absolute flex items-center justify-center 
-            flex-col pt-0 my-11 w-screen text-center
+            flex-col pt-0 my-11 w-screen text-center 
             
             sm:flex-col-reverse
             lg:flex-row-reverse lg:items-center">
