--- a/layouts/crew-pilot.html
+++ b/layouts/crew-pilot.html
@@ -74,7 +74,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./technology.html" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
                     sm:relative sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
