--- a/layouts/crew.html
+++ b/layouts/crew.html
@@ -74,7 +74,7 @@
                 </li>
 
                 <li>
-                    <a href="" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
+                    <a href="./technology.html" class=" font-BarlowCondensed uppercase tracking-[2.7px] 
                     font-fw400 text-v11 outline-none
                     sm:relative sm:navHover">
                         <span class="font-fw700 mr-[.75rem]"
@@ -86,12 +86,11 @@
 
     </header>
 
-
     <main>
         <div class="crew__bg absolute text-pureWhite text-center top-0 -z-10
             flex items-center justify-center">
             <div class="crew-bg-img bg-crewBgPhn bg-no-repeat bg-cover bg-center
-             w-screen h-[720px] min-h-screen overflow-hidden
+             w-screen h-[720px] min-h-screen
 
             md:bg-crewBgTab 
             lg:bg-crewBgDesk ">
@@ -173,8 +172,7 @@
                  lg:text-left ">
                         <span class="font-fw700 text-pureWhite/25 "
                             aria-hidden="true">02
-                        </span>meet
-                        the crew
+                        </span>meet the crew
                     </h1>
 
                     <h2 class="font-Bellefair text-pureWhite text-v8 uppercase font-fw400 
